# dev_shell

./: README.md  main.py  pyproject.toml  requirements.txt  shell.py
.github/workflows/: lint.yml
commands/: __init__.py  directory_commands.py  file_commands.py  git_commands.py  help_command.py  log_commands.py  network_commands.py  permission_commands.py  server_commands.py  system_commands.py  tree_command.py  watch_command.py
integration/: __init_.py
monitoring/: prometheus_client.py  queries.py
src/dev_shell/: __init__.py  __main__.py  cli.py
src/dev_shell/commands/: __init__.py
src/dev_shell/commands/directory/: __init__.py  create.py  navigation.py  tree.py
src/dev_shell/commands/file/: __init__.py  _shared.py  inspect.py  listing.py  read.py  remove.py  search.py  transfer.py  write.py
src/dev_shell/commands/logs/: __init__.py  logs.py
src/dev_shell/commands/meta/: __init__.py  help.py
src/dev_shell/commands/network/: __init__.py  dns.py  http.py  ip.py  nslookup.py  ping.py  traceroute.py
src/dev_shell/commands/permissions/: __init__.py  perm.py
src/dev_shell/commands/server/: __init__.py  registry.py  watch.py
src/dev_shell/commands/system/: __init__.py  _helpers.py  cpu.py  disk.py  (+10 more)
src/dev_shell/config/: __init__.py
src/dev_shell/core/: __init__.py  registry.py  shell.py
src/dev_shell/integration/: __init__.py  docker_commands.py
src/dev_shell/monitoring/: __init__.py  prometheus_client.py
src/dev_shell/utils/: formatters.py  validators.py
tests/: test_network_commands.py
utils/: __init__.py  formatters.py  logger.py
